--- a/GT3.html
+++ b/GT3.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IFWL.net — GTEAM3 Rules & Procedures (2026)</title>
-  <meta name="description" content="IFWL GTEAM3 team endurance rules, procedures, stewarding codes and ticket process." />
+  <title>IFWL.net — GTEAM3 Hub (2026)</title>
+  <meta name="description" content="IFWL GTEAM3 team endurance hub: team requirements, Discord channels, red flag procedures, stewarding tickets, and steward codes." />
 
   <style>
     :root{
@@ -250,6 +250,7 @@
       font-family: var(--mono);
       font-size: 12px;
     }
+    .mono{font-family: var(--mono)}
     footer{
       margin-top: 18px;
       color: var(--muted);
@@ -267,7 +268,6 @@
     }
     .hide{display:none !important}
     .anchor{scroll-margin-top: 20px;}
-    .tight ul{margin-top:6px}
     .sep{height:1px;background:var(--line);margin:10px 0}
   </style>
 </head>
@@ -277,8 +277,8 @@
     <header class="card">
       <div class="topline">
         <div class="brand">
-          <h1>IFWL.NET — GTEAM3 Rules & Procedures</h1>
-          <div class="sub">GTEAM3 (ACC) — Team Endurance Events • 2026</div>
+          <h1>IFWL.NET — GTEAM3 Hub</h1>
+          <div class="sub">Everything teams need for GTEAM3 (ACC) • 2026</div>
         </div>
 
         <div class="controls">
@@ -287,23 +287,24 @@
         </div>
       </div>
 
-      <div class="search" aria-label="Search rules">
+      <div class="search" aria-label="Search GTEAM3 hub">
         <span class="muted" style="font-family:var(--mono);font-size:12px;">CTRL</span>
         <span class="muted" style="font-family:var(--mono);font-size:12px;">/</span>
-        <input id="searchInput" type="search" placeholder="Search (e.g., “red flag”, “RP8”, “ticket window”)…" />
+        <input id="searchInput" type="search" placeholder="Search (e.g., “driver sign up”, “race control”, “red flag”, “RP8”)…" />
         <button class="clearBtn" id="clearSearch" type="button" aria-label="Clear search">✕</button>
       </div>
 
       <div class="note" style="margin-top:12px;">
         <p class="small">
-          This is a dedicated handbook for IFWL GTEAM3 only. Edit freely. Discord participation is required throughout all sessions.
+          Edit freely. Anything official for race operations will be posted only in the channels listed on this page.
         </p>
       </div>
 
       <div style="margin-top:14px;">
         <h2 style="margin:0 0 8px;">Table of Contents</h2>
         <div class="toc">
-          <a href="#overview">Overview</a>
+          <a href="#requirements">Team Requirements</a>
+          <a href="#channels">Official Discord Channels</a>
           <a href="#procedures">Race Control Procedures</a>
           <a href="#tickets">Stewards Ticket Process</a>
           <a href="#stewardcodes">Stewards Codes Explained</a>
@@ -311,35 +312,97 @@
       </div>
     </header>
 
-    <!-- OVERVIEW -->
-    <details class="section anchor" id="overview" open>
+    <!-- TEAM REQUIREMENTS -->
+    <details class="section anchor" id="requirements" open>
       <summary>
         <div class="sum-left">
-          <div class="kicker">GTEAM3</div>
-          <div>Overview (what matters)</div>
+          <div class="kicker">Teams</div>
+          <div>Requirements and expectations for every team</div>
         </div>
         <div class="chev">+</div>
       </summary>
       <div class="content">
         <div class="rule-grid">
-          <div class="rule tight">
-            <div class="tag">Core rules</div>
+
+          <div class="rule">
+            <div class="tag">Discord & Driver Sign Up (required)</div>
             <ul>
-              <li>Discord participation is mandatory throughout the event.</li>
-              <li>All teams must monitor <span class="pill">#gteam3-announcements</span> during sessions.</li>
-              <li>Server password is posted in Discord.</li>
-              <li>Team endurance format: multi-driver teams (team size set per season announcement).</li>
-              <li>Weather and time progression vary per round.</li>
+              <li>All teams are required to join the IFWL Discord.</li>
+              <li>All drivers must complete the IFWL Driver Sign Up (this unlocks Discord access).</li>
+              <li>Driver Sign Up can be completed by heading to <strong>IFWL.net</strong> and completing Driver Sign Up.</li>
+              <li>When complete, Discord names will be formatted as: <span class="pill">[ number ] - name</span></li>
             </ul>
           </div>
 
-          <div class="rule tight">
-            <div class="tag">Start driver</div>
+          <div class="rule">
+            <div class="tag">Race communications (required)</div>
             <ul>
-              <li>The designated starting driver must be confirmed in <span class="pill">#team-confirmations</span>.</li>
-              <li>For red flag restarts, the restart-starting driver must join the server first (see procedures).</li>
+              <li>One person from every team must actively monitor Race Control during the race.</li>
+              <li>During race hours, IFWL will only issue official operational calls (including Red Flags) in the Race Control channel.</li>
+              <li>If you miss a call because you are not watching Race Control, that is on the team.</li>
             </ul>
           </div>
+
+        </div>
+      </div>
+    </details>
+
+    <!-- OFFICIAL DISCORD CHANNELS -->
+    <details class="section anchor" id="channels">
+      <summary>
+        <div class="sum-left">
+          <div class="kicker">Discord</div>
+          <div>Where information is posted (official sources only)</div>
+        </div>
+        <div class="chev">+</div>
+      </summary>
+      <div class="content">
+        <div class="rule-grid">
+
+          <div class="rule">
+            <div class="tag">Race Control (in-race operations)</div>
+            <p class="muted">This is the only channel where IFWL will officially call a red flag (server restart) whilst in-race.</p>
+            <p class="mono">
+              <a href="https://discord.com/channels/1164493249457684542/1476003326058299453" target="_blank" rel="noopener noreferrer">
+                https://discord.com/channels/1164493249457684542/1476003326058299453
+              </a>
+            </p>
+            <ul>
+              <li>Red flags</li>
+              <li>Restart instructions</li>
+              <li>Urgent race control comms</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">Forecast (weather only)</div>
+            <p class="muted">The full simulated weather forecast will only be published here. This is the only place you will find weather updates.</p>
+            <p class="mono">
+              <a href="https://discord.com/channels/1164493249457684542/1476007020912967710" target="_blank" rel="noopener noreferrer">
+                https://discord.com/channels/1164493249457684542/1476007020912967710
+              </a>
+            </p>
+            <ul>
+              <li>Pre-event forecast</li>
+              <li>Any planned weather notes</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">Updates (out-of-race hours)</div>
+            <p class="muted">Any changes, alterations, or edits to GTEAM3 will be posted here (outside of race hours).</p>
+            <p class="mono">
+              <a href="https://discord.com/channels/1164493249457684542/1476002665375858839" target="_blank" rel="noopener noreferrer">
+                https://discord.com/channels/1164493249457684542/1476002665375858839
+              </a>
+            </p>
+            <ul>
+              <li>Schedule changes</li>
+              <li>Server setting changes</li>
+              <li>Rule clarifications / amendments</li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </details>
@@ -348,7 +411,7 @@
     <details class="section anchor" id="procedures">
       <summary>
         <div class="sum-left">
-          <div class="kicker">Race control</div>
+          <div class="kicker">Race Control</div>
           <div>Red flags, server crashes, starts & restarts</div>
         </div>
         <div class="chev">+</div>
@@ -367,53 +430,51 @@
           </div>
 
           <div class="rule">
-            <div class="tag">Red flag: idiot-proof timeline (with ACM GridMaker)</div>
+            <div class="tag">Red flag timeline (with ACM GridMaker)</div>
 
-            <p><strong>Step 1 — RED FLAG called (0 minutes)</strong></p>
+            <p><strong>RED FLAG called</strong></p>
             <ul>
-              <li>Admin posts <strong>RED FLAG</strong> in <span class="pill">#gteam3-announcements</span>.</li>
+              <li>Admin posts <strong>RED FLAG</strong> in Race Control.</li>
               <li>All drivers lift, return to pits safely, and await instructions.</li>
               <li>No overtaking. No leaving unless instructed.</li>
             </ul>
 
             <div class="sep"></div>
 
-            <p><strong>Step 2 — Cooldown / server OFFLINE (0–30 minutes)</strong></p>
+            <p><strong>Cooldown / server OFFLINE (up to 30 minutes)</strong></p>
             <ul>
               <li>Server shuts down for up to <strong>30 minutes</strong>.</li>
               <li>Admin captures latest valid running order.</li>
               <li>Admin generates the restart grid using <strong>ACM GridMaker</strong>.</li>
-              <li>All teams stay in Discord and watch announcements.</li>
+              <li>All teams stay in Discord and watch Race Control.</li>
               <li><strong>Do not join the server early.</strong></li>
             </ul>
 
             <div class="sep"></div>
 
-            <p><strong>Step 3 — PRACTICE session opens (30–50 minutes)</strong></p>
+            <p><strong>Server returns: PRACTICE (15–20 minutes)</strong></p>
             <ul>
-              <li>Server returns in <strong>PRACTICE</strong> for <strong>15–20 minutes</strong>.</li>
-              <li>Teams join calmly, apply setups, and complete driver swaps.</li>
-              <li><strong>The restart-starting driver must join first</strong> (as confirmed in <span class="pill">#team-confirmations</span>).</li>
-              <li>This session is for organisation only — no racing required.</li>
+              <li>Teams rejoin calmly, apply setups, and complete driver swaps.</li>
+              <li><strong>The restart-starting driver must join first</strong> (as confirmed in team confirmations).</li>
+              <li>This session exists for organisation only — no racing required.</li>
             </ul>
 
             <div class="sep"></div>
 
-            <p><strong>Step 4 — RACE session loads (50 minutes+)</strong></p>
+            <p><strong>Server switches to RACE</strong></p>
             <ul>
-              <li>Admin switches to <strong>RACE</strong> with:</li>
-              <li>Remaining race time applied (downtime removed where applicable)</li>
-              <li>ACM grid order applied</li>
-              <li>Weather + time progression restored as closely as possible</li>
+              <li>Remaining race time applied (downtime removed where applicable).</li>
+              <li>ACM grid order applied.</li>
+              <li>Weather + time progression restored as closely as possible.</li>
             </ul>
 
             <div class="sep"></div>
 
-            <p><strong>Step 5 — Restart (formation + green flag)</strong></p>
+            <p><strong>Restart</strong></p>
             <ul>
-              <li>Short formation lap</li>
-              <li>Single file, hold position</li>
-              <li>No overtaking until Race Control calls <strong>GREEN</strong></li>
+              <li>Short formation lap.</li>
+              <li>Single file, hold position.</li>
+              <li>No overtaking until Race Control calls <strong>GREEN</strong>.</li>
             </ul>
           </div>
 
@@ -440,7 +501,7 @@
             <div class="tag">Lap 1 incident rule (start + restart)</div>
             <ul>
               <li>Any team found predominantly at fault for causing a collision on Lap 1 will receive a <strong>Drive Through</strong>.</li>
-              <li>Once posted in <span class="pill">#live-incident-outcomes</span>, the team has <strong>5 laps</strong> to serve it.</li>
+              <li>Once posted in live outcomes, the team has <strong>5 laps</strong> to serve it.</li>
               <li>For each lap late, an additional <strong>10s Stop &amp; Go</strong> will be applied.</li>
               <li>IFWL may disqualify teams/drivers for behaviour below expected standards (including intentional collisions and poor Discord conduct).</li>
             </ul>
@@ -463,9 +524,8 @@
         <div class="rule-grid">
 
           <div class="rule">
-            <div class="tag">Incident reporting</div>
+            <div class="tag">Incident reporting window</div>
             <ul>
-              <li>All incidents must be reported in <span class="pill">#incident-reporting</span>.</li>
               <li>Incident reporting opens immediately after the race concludes.</li>
               <li>Incident reporting closes <strong>24 hours</strong> after the race ends.</li>
               <li>Late reports will not be reviewed.</li>
@@ -480,6 +540,7 @@
               <li>Cars/drivers involved</li>
               <li>Short summary of what happened</li>
               <li>Evidence: replay clip / stream VOD / screenshots (recommended)</li>
+              <li>Steward Code (if known — see codes section)</li>
             </ul>
           </div>
 
@@ -507,9 +568,7 @@
         <div class="chev">+</div>
       </summary>
       <div class="content">
-        <p class="muted">
-          Use the search bar to find codes instantly (example: “RP8” or “blue flag”).
-        </p>
+        <p class="muted">Use the search bar to find codes instantly (example: “RP8” or “blue flag”).</p>
 
         <table>
           <thead>
@@ -608,34 +667,27 @@
         <strong>Keyboard tip:</strong> press <span class="kbd">Ctrl</span> + <span class="kbd">/</span> to jump to search.
       </div>
       <div class="small muted" style="margin-top:6px;">
-        © IFWL.net — GTEAM3 Rules & Procedures.
+        © IFWL.net — GTEAM3 Hub.
       </div>
     </footer>
   </div>
 
   <script>
-    // Expand/collapse chevrons and controls
     function syncChevrons(){
       document.querySelectorAll("details.section > summary .chev").forEach(ch => {
         const det = ch.closest("details");
         ch.textContent = det && det.open ? "–" : "+";
       });
     }
-
     function setAll(open){
       document.querySelectorAll("details.section").forEach(d => d.open = open);
       syncChevrons();
     }
-
     document.getElementById("expandAll").addEventListener("click", () => setAll(true));
     document.getElementById("collapseAll").addEventListener("click", () => setAll(false));
-
-    document.querySelectorAll("details.section").forEach(d => {
-      d.addEventListener("toggle", syncChevrons);
-    });
+    document.querySelectorAll("details.section").forEach(d => d.addEventListener("toggle", syncChevrons));
     syncChevrons();
 
-    // SEARCH (textContent so collapsed details are searchable)
     const input = document.getElementById("searchInput");
     const clearBtn = document.getElementById("clearSearch");
     const topSections = Array.from(document.querySelectorAll("details.section.anchor"));
