--- a/GT3.html
+++ b/GT3.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IFWL.net — GTEAM3 Hub (2026)</title>
-  <meta name="description" content="IFWL GTEAM3 team endurance hub: team requirements, Discord channels, red flag procedures, stewarding tickets, and steward codes." />
+  <meta name="description" content="IFWL GTEAM3 team endurance hub: team requirements, Discord channels, weather report, red flag procedures, stewarding tickets, and steward codes." />
 
   <style>
     :root{
@@ -269,6 +269,12 @@
     .hide{display:none !important}
     .anchor{scroll-margin-top: 20px;}
     .sep{height:1px;background:var(--line);margin:10px 0}
+
+    /* Weather table tweaks */
+    .weather-table td:first-child{width: 240px;}
+    @media (max-width: 520px){
+      .weather-table td:first-child{width:auto;}
+    }
   </style>
 </head>
 
@@ -290,7 +296,7 @@
       <div class="search" aria-label="Search GTEAM3 hub">
         <span class="muted" style="font-family:var(--mono);font-size:12px;">CTRL</span>
         <span class="muted" style="font-family:var(--mono);font-size:12px;">/</span>
-        <input id="searchInput" type="search" placeholder="Search (e.g., “driver sign up”, “race control”, “red flag”, “RP8”)…" />
+        <input id="searchInput" type="search" placeholder="Search (e.g., “weather preset”, “race control”, “red flag”, “RP8”)…" />
         <button class="clearBtn" id="clearSearch" type="button" aria-label="Clear search">✕</button>
       </div>
 
@@ -305,6 +311,7 @@
         <div class="toc">
           <a href="#requirements">Team Requirements</a>
           <a href="#channels">Official Discord Channels</a>
+          <a href="#weather">Weather Report</a>
           <a href="#procedures">Race Control Procedures</a>
           <a href="#tickets">Stewards Ticket Process</a>
           <a href="#stewardcodes">Stewards Codes Explained</a>
@@ -367,11 +374,6 @@
                 https://discord.com/channels/1164493249457684542/1476003326058299453
               </a>
             </p>
-            <ul>
-              <li>Red flags</li>
-              <li>Restart instructions</li>
-              <li>Urgent race control comms</li>
-            </ul>
           </div>
 
           <div class="rule">
@@ -382,10 +384,6 @@
                 https://discord.com/channels/1164493249457684542/1476007020912967710
               </a>
             </p>
-            <ul>
-              <li>Pre-event forecast</li>
-              <li>Any planned weather notes</li>
-            </ul>
           </div>
 
           <div class="rule">
@@ -396,13 +394,55 @@
                 https://discord.com/channels/1164493249457684542/1476002665375858839
               </a>
             </p>
-            <ul>
-              <li>Schedule changes</li>
-              <li>Server setting changes</li>
-              <li>Rule clarifications / amendments</li>
-            </ul>
           </div>
 
+        </div>
+      </div>
+    </details>
+
+    <!-- WEATHER REPORT -->
+    <details class="section anchor" id="weather">
+      <summary>
+        <div class="sum-left">
+          <div class="kicker">Weather</div>
+          <div>Server weather preset (edit this per event)</div>
+        </div>
+        <div class="chev">+</div>
+      </summary>
+      <div class="content">
+        <div class="rule">
+          <div class="tag">Weather report</div>
+          <p class="muted">
+            This section is editable. Update it with the server preset values used for the next GTEAM3 event.
+          </p>
+
+          <table class="weather-table">
+            <thead>
+              <tr>
+                <th>Setting</th>
+                <th>Value (edit me)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><td><strong>Weather preset</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
+              <tr><td><strong>Ambient temp</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
+              <tr><td><strong>Track temp</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
+              <tr><td><strong>Cloud level</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
+              <tr><td><strong>Rain</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
+              <tr><td><strong>Randomness</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
+            </tbody>
+          </table>
+
+          <p style="margin-top:12px;">
+            <strong>Forecast simulation tool:</strong><br />
+            <a href="https://www.lennyslounge.net/ACC%20Weather%20sim/" target="_blank" rel="noopener noreferrer">
+              https://www.lennyslounge.net/ACC%20Weather%20sim/
+            </a>
+          </p>
+
+          <p class="muted small">
+            Note: The only official published forecast for the event will be posted in the IFWL Discord forecast channel.
+          </p>
         </div>
       </div>
     </details>
