--- a/GT3.html
+++ b/GT3.html
@@ -405,7 +405,7 @@
       <summary>
         <div class="sum-left">
           <div class="kicker">Weather</div>
-          <div>Server weather preset (edit this per event)</div>
+          <div>weather report may 3rd 2026</div>
         </div>
         <div class="chev">+</div>
       </summary>
@@ -413,23 +413,23 @@
         <div class="rule">
           <div class="tag">Weather report</div>
           <p class="muted">
-            This section is editable. Update it with the server preset values used for the next GTEAM3 event.
+            IFWL provide teams with full weather preset per race - this will be updated once per month
           </p>
 
           <table class="weather-table">
             <thead>
               <tr>
                 <th>Setting</th>
-                <th>Value (edit me)</th>
+                <th>Value (subject to change)</th>
               </tr>
             </thead>
             <tbody>
-              <tr><td><strong>Weather preset</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
-              <tr><td><strong>Ambient temp</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
-              <tr><td><strong>Track temp</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
-              <tr><td><strong>Cloud level</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
-              <tr><td><strong>Rain</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
-              <tr><td><strong>Randomness</strong></td><td><span class="pill">EDIT_ME</span></td></tr>
+              <tr><td><strong>Weather preset</strong></td><td><span class="pill">DRY</span></td></tr>
+              <tr><td><strong>Ambient temp</strong></td><td><span class="pill">26</span></td></tr>
+              <tr><td><strong>Track temp</strong></td><td><span class="pill">30</span></td></tr>
+              <tr><td><strong>Cloud level</strong></td><td><span class="pill">0.05</span></td></tr>
+              <tr><td><strong>Rain</strong></td><td><span class="pill">0</span></td></tr>
+              <tr><td><strong>Randomness</strong></td><td><span class="pill">0</span></td></tr>
             </tbody>
           </table>
 
