--- a/GT3.html
+++ b/GT3.html
@@ -584,7 +584,7 @@
           <summary>
             <div class="sum-left">
               <div class="kicker">Weather report</div>
-              <div>Server preset (edit these values)</div>
+              <div>Server preset - May 3rd</div>
             </div>
             <div class="chev">–</div>
           </summary>
@@ -592,20 +592,20 @@
             <div class="rule">
               <div class="tag">Paste into server settings</div>
               <p class="muted" style="margin-top:0;">
-                Update the values below per event. This is what teams should use as the on-site “source of truth” for the preset.
+                no guess work, our server is running these exact settings.
               </p>
 
               <table>
                 <thead>
-                  <tr><th>Setting</th><th>Value (edit me)</th></tr>
+                  <tr><th>Setting</th><th>Value (May 3RD)</th></tr>
                 </thead>
                 <tbody>
-                  <tr><td><strong>Weather preset</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                  <tr><td><strong>Ambient temp</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                  <tr><td><strong>Track temp</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                  <tr><td><strong>Cloud level</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                  <tr><td><strong>Rain</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                  <tr><td><strong>Randomness</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
+                  <tr><td><strong>Weather preset</strong></td><td><span class="pillval">DRY</span></td></tr>
+                  <tr><td><strong>Ambient temp</strong></td><td><span class="pillval">26</span></td></tr>
+                  <tr><td><strong>Track temp</strong></td><td><span class="pillval">30</span></td></tr>
+                  <tr><td><strong>Cloud level</strong></td><td><span class="pillval">0.05</span></td></tr>
+                  <tr><td><strong>Rain</strong></td><td><span class="pillval">0</span></td></tr>
+                  <tr><td><strong>Randomness</strong></td><td><span class="pillval">0</span></td></tr>
                 </tbody>
               </table>
 
