--- a/GT3.html
+++ b/GT3.html
@@ -537,8 +537,8 @@
           <div class="card-head">
             <div class="title">
               <div class="kicker">Weather</div>
-              <p class="h2">Current preset (edit on page)</p>
-              <p class="sub">Copy these into the ACC server.</p>
+              <p class="h2">Current preset (may 3rd)</p>
+              <p class="sub">NO GUESS WORK : OUR SERVER IS LIVE ON THESE SETTINGS.</p>
             </div>
             <span class="chev" style="border-color:rgba(255,255,255,.12);">LIVE</span>
           </div>
@@ -548,12 +548,12 @@
                 <tr><th>Setting</th><th>Value</th></tr>
               </thead>
               <tbody>
-                <tr><td><strong>Weather preset</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                <tr><td><strong>Ambient temp</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                <tr><td><strong>Track temp</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                <tr><td><strong>Cloud level</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                <tr><td><strong>Rain</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
-                <tr><td><strong>Randomness</strong></td><td><span class="pillval">EDIT_ME</span></td></tr>
+                <tr><td><strong>Weather preset</strong></td><td><span class="pillval">DRY</span></td></tr>
+                <tr><td><strong>Ambient temp</strong></td><td><span class="pillval">26</span></td></tr>
+                <tr><td><strong>Track temp</strong></td><td><span class="pillval">30</span></td></tr>
+                <tr><td><strong>Cloud level</strong></td><td><span class="pillval">0.05</span></td></tr>
+                <tr><td><strong>Rain</strong></td><td><span class="pillval">0</span></td></tr>
+                <tr><td><strong>Randomness</strong></td><td><span class="pillval">0</span></td></tr>
               </tbody>
             </table>
 
