--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -38,7 +38,7 @@
 
   <script>
     const WORKER_BASE = "https://fancy-frog-e248.benjamin-leahy1.workers.dev";
-    const AUTH_TOKEN = "PASTE_YOUR_AUTH_TOKEN_HERE";
+    const AUTH_TOKEN = "ifwl-redflag-2026";
 
     const statusEl = document.getElementById("status");
 
