--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -54,7 +54,7 @@
   <div class="wrap">
     <div class="panel">
       <div class="big" id="title"><span class="dot green" id="dot"></span>GREEN FLAG</div>
-      <p class="sub" id="msg">Practice session live — join with primary driver.</p>
+      <p class="sub" id="msg">Race control : green flag (does not overide yellow or blue).</p>
       <div class="stamp" id="stamp">Last update: —</div>
     </div>
   </div>
