--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -86,7 +86,7 @@
       title.innerHTML = `<span class="${dot.className}"></span>${isRed ? "RED FLAG" : "GREEN FLAG"}`;
       msg.textContent = isRed
         ? "Return to pits immediately. Send standings screenshot into Discord."
-        : "Practice session live — join with primary driver.";
+        : "RACE CONTROL : GREEN.";
       stamp.textContent = "Last update: " + (updatedAt ? fmt(updatedAt) : "—");
     }
 
