--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -83,7 +83,7 @@
       document.body.classList.toggle("red", isRed);
 
       dot.className = "dot " + (isRed ? "red" : "green");
-      title.innerHTML = `<span class="${dot.className}"></span>${isRed ? "RED FLAG" : "RACE CONTROL : GREEN"}`;
+      title.innerHTML = `<span class="${dot.className}"></span>${isRed ? "RED FLAG" : "SEVER GOOD : ADHERE TO RACE FLAGS"}`;
       msg.textContent = isRed
         ? "Return to pits immediately. Send standings screenshot into Discord."
         : "RACE CONTROL : GREEN.";
