--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -6,39 +6,56 @@
   <title>IFWL — Race Control</title>
   <style>
     body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;font-family:system-ui;background:#0b1220;color:#fff}
-    .wrap{width:min(720px,92vw);text-align:center}
+    .wrap{width:min(980px,92vw);text-align:center}
     h1{margin:0 0 10px;font-size:28px}
     p{margin:0 0 22px;opacity:.75}
     .row{display:flex;gap:18px;justify-content:center;flex-wrap:wrap}
     button{
-      border:none;cursor:pointer;font-weight:900;letter-spacing:.3px;
-      width:260px;height:260px;border-radius:999px;
+      border:none;cursor:pointer;font-weight:1000;letter-spacing:.3px;
+      width:240px;height:240px;border-radius:999px;
       box-shadow:0 18px 55px rgba(0,0,0,.45);
       transition:transform .08s ease, filter .12s ease;
-      color:#fff;font-size:20px;
+      color:#fff;font-size:18px; padding:16px;
+      line-height:1.15;
     }
     button:active{transform:scale(.98)}
     .red{background:radial-gradient(circle at 30% 25%, #ff7a7a, #ef4444 45%, #7f1d1d)}
+    .yellow{color:#111827;background:radial-gradient(circle at 30% 25%, #fff3b0, #f59e0b 45%, #7c4a00)}
     .green{background:radial-gradient(circle at 30% 25%, #86efac, #22c55e 45%, #14532d)}
     .status{margin-top:18px;font-family:ui-monospace,Menlo,Consolas,monospace;opacity:.9}
+    .hint{margin-top:10px;opacity:.75;font-size:13px}
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>IFWL Race Control</h1>
-    <p>Posts to Discord + switches the live Command Center state.</p>
+    <p>Posts to Discord + updates Command Center + SimHub flag.</p>
 
     <div class="row">
-      <button class="red" id="btnRed">CALL RED FLAG</button>
+      <button class="red" id="btnRed">CALL<br>RED FLAG</button>
+
+      <button class="yellow" id="btnVscSlow">
+        VIRTUAL SAFETY CAR<br><br>
+        Remain in formation<br>
+        Continue at reduced speed
+      </button>
+
+      <button class="yellow" id="btnVscPit">
+        VIRTUAL SAFETY CAR<br><br>
+        Enter pits now<br>
+        Keep formation at pit exit line
+      </button>
+
       <button class="green" id="btnGreen">GREEN FLAG</button>
     </div>
 
     <div class="status" id="status">Ready.</div>
+    <div class="hint">Tip: keep this page private — it can trigger live race control.</div>
   </div>
 
   <script>
     const WORKER_BASE = "https://fancy-frog-e248.benjamin-leahy1.workers.dev";
-    const AUTH_TOKEN = "ifwl-redflag-2026";
+    const AUTH_TOKEN  = "ifwl-redflag-2026";
 
     const statusEl = document.getElementById("status");
 
@@ -62,6 +79,8 @@
     }
 
     document.getElementById("btnRed").addEventListener("click", ()=>setState("red"));
+    document.getElementById("btnVscSlow").addEventListener("click", ()=>setState("vsc_slow"));
+    document.getElementById("btnVscPit").addEventListener("click", ()=>setState("vsc_pit"));
     document.getElementById("btnGreen").addEventListener("click", ()=>setState("green"));
   </script>
 </body>
